# dtu-mlops-monitoring

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/api/: main.py  models.py
tests/: test_things.py
